--- a/Tutor.html
+++ b/Tutor.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="struktur">
-<center><img src="Ramli.jpg"hspace=20 vspace=15 width=100 height =150
+<center><img src="ramli.jpg"hspace=20 vspace=15 width=100 height =150
 	align="center" border=2></center>
 <center><p>-Ramli, S.Pd,M.H</p></center>
 
