--- a/Jadwal_Les.html
+++ b/Jadwal_Les.html
@@ -9,7 +9,7 @@
 <i>Success By Yourself</i>
 <font face=arial size=3 color=black>
 <hr>
-<center>| <a href=Les_Privat_Kuy.html>Home</a>|</center>
+<center>| <a href=index.html>Home</a>|</center>
 <center>| <a href=Mata_Pelajaran.html>Mata Pelajaran</a>|</center>
 <center>| <a href=Jadwal_Les.html>Jadwal Les</a> |</center>
 <center>| <a href=Tutor.html>Tutor</a> |</center>
